--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #000000;
+  background-color: #1a1919;
 }
 
 .container {
-  background-color: #fff;
+  background-color: #000000;
   padding: 20px;
   border-radius: 5px;
+  width: 300px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -45,4 +46,25 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+select{
+  width: 200px;
+  height: 25px;
+  background-color: white;
+  color: black;
+}
+
+input{
+  background-color: white;
+  color: #000000;
+  width: 250px;
+}
+
+.box{
+  margin: 10px;
+}
+
+.box1{
+  background-color: #000000;
 }
